apps/ghost/overlays/prod/patch-ghost-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  template:
    spec:
      containers:
      - name: ghost
